# workspace_2024

./: .gitignore  README.md
ChronoTagLogger-rs/: Cargo.toml
ChronoTagLogger-rs/src/: git_utils.rs  main.rs
ProGo/pro-go/: errata.md  typos.md
Python-2024/: 俺を読め.md
abc384/D/: main
abc384/E/: Cargo.toml
abc385/A/: Cargo.toml
abc385/B/: Cargo.toml
abc385/C/: Cargo.toml
abc385/D/: :  Cargo.toml
abc385/E/: Cargo.toml
abc385/F/: Cargo.toml
abc385/G/: Cargo.toml
celestial-models-wasm/src/: lib.rs
celestial-models-wasm/static/: celestial_models_wasm.js  celestial_models_wasm_bg.wasm  index.html
cnd-handson/chapter_cluster-create/: kind-config.yaml
count-wasm/: README.md  go.mod  index.html  main.go  main.js  main.wasm  server.go  style.css
dur/: Cargo.toml  README.md
dur/src/: app.rs  main.rs  scanner.rs  types.rs
dur/src/ui/: draw.rs  event.rs  mod.rs
exp/exp/: Cargo.toml  Config.toml
fiber-crud-api/: Dockerfile  docker-compose.yml  go.mod  go.sum  init.sql  main.go
git-rs/: Cargo.toml  README.md
git-rs/src/: main.rs
go-rod/: go.mod  go.sum  main.go
istio-virtual-waiting-room/: Dockerfile  go.mod  istio-rules.yaml  main.go  test.sh  waiting-room.yaml
istio-virtual-waiting-room/access_test_results/: results.csv
isucon14/: README.md  Taskfile.yml
isucon14/bench/: .gitignore  .ko.yaml  Dockerfile  Taskfile.yml  entrypoint.sh  go.mod  go.sum  main.go  tools.go
isucon14/browsercheck/: .gitignore  config.js  package.json  pnpm-lock.yaml  run.js  utils.js
isucon14/development/: compose-go.yml  compose-local.yml  compose-node.yml  compose-perl.yml  compose-php.yml  compose-python.yml  compose-ruby.yml  compose-rust.yml  matching.js
isucon14/docs/: .textlintrc.json  ISURIDE.md  manual.md  package.json  pnpm-lock.yaml  prh-rule.yaml
isucon14/envcheck/: .gitignore
isucon14/frontend/: .eslintrc.cjs  .gitignore  .prettierignore  Makefile  README.md  api-url.mjs  chair-simulator.mjs  initial-data.json  openapi-codegen.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
isucon14/provisioning/: README.md
isucon14/webapp/: openapi.yaml
isucon14/webapp/python/: .pre-commit-config.yaml  gunicorn.conf.py  noxfile.py  pyproject.toml
isucon14/webapp/python/app/: app_handlers.py  chair_handlers.py  internal_handlers.py  main.py  middlewares.py  models.py  owner_handlers.py  payment_gateway.py  sql.py  utils.py
isucon14/webapp/rust/: Cargo.toml
isucon14/webapp/rust/src/: app_handlers.rs  chair_handlers.rs  internal_handlers.rs  lib.rs  main.rs  middlewares.rs  models.rs  owner_handlers.rs  payment_gateway.rs
jpostcode/: Cargo.toml  build.rs
jpostcode/examples/: advanced.rs  basic.rs  poi.rs
jpostcode/src/: error.rs  lib.rs
jpostcode_tui/: Cargo.toml
kind-tips-and-tricks/: README.md
sqlboiler/: .null-ls_167755_main.go  docker-compose.yaml  go.mod  go.sum  main.go  v01_delete.sql  v01_insert.sql  v01_library.sql
sqldef/: README.md  v01_library.sql  v02_library.sql  v03_library.sql
sre-checklist/: README-ja.md  README.md
tfocus/: Cargo.toml  README.md
tfocus/sample/: eks.tf  main.tf
tfocus/src/: cli.rs  display.rs  error.rs  executor.rs  input.rs  main.rs  project.rs  selector.rs  types.rs
toi/: README.md  go.mod  main.go
url-shortener-detector/: README.md  go.mod  go.sum  main.go
url_redirect/: main.sh
uv-streamlit-demo/: README.md  app.py  pyproject.toml
weblitechecker/: Dockerfile  README.md  go.mod  main.go
yubin_api/: Cargo.toml  README.md
yubin_api/src/: error.rs  lib.rs  main.rs  metrics.rs  models.rs  routes.rs
(+480 files in other folders)
