[package]
name = "dur"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
crossterm = "0.27"
dirs = "5.0"
humansize = "2.1"
indicatif = "0.17"
rayon = "1.8"
ratatui = "0.26.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-width = "0.1"
walkdir = "2.4"
