[package]
name = "tfocus"
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir = "2.3"
regex = "1.5"
clap = { version = "4.4", features = ["derive"] }
thiserror = "1.0"
colored = "2.0"
log = "0.4"
env_logger = "0.10"
ctrlc = "3.4"
crossterm = "0.27"
fuzzy-matcher = "0.3"
nix = { version = "0.26", features = ["signal"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.48", features = ["Win32_System_Threading", "Win32_Foundation"] }

[dev-dependencies]
tempfile = "3.8"
assert_fs = "1.0"
predicates = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
