[package]
name = "isuride"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
axum = "0.7"
axum-extra = { version = "0.9", features = ["cookie"] }
chrono = "0.4"
hex = "0.4"
listenfd = "1"
num-traits = "0.2"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "json"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "mysql", "macros", "chrono", "rust_decimal"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "process"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ulid = "1"
